--- a/page/package.json
+++ b/page/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ersekbeatriceadrienne.github.io/page",
+  "homepage": "https://ersekbeatriceadrienne.github.io/portfolio/",
   "name": "page",
   "version": "0.1.0",
   "private": true,
